# experimental_gpu_programming_for_a_spectral_numerical_integration

./: main.cpp
cuda_sandbox/: CMakeLists.txt
cuda_sandbox/include/: benchmark_csv_exporter.h  globals.h  spectral_integration_utilities.h
cuda_sandbox/src/benchmark_2023/: benchmark_quaternion.cu  benchmark_template.h  main_benchmark.cpp  main_benchmark_CPU.cpp  main_benchmark_GPU.cu  main_benchmark_kernel_GPU.cu  matInv_benchmark  matInv_benchmark.cu  matLU_benchmark.cu  matMul_benchmark.cu  matSys_benchmark.cu  stridedBatch.cu
cuda_sandbox/src/main/: main.cu  main_kernel.cu
